syntax = "proto3";

package user;

option java_package = "com.proto.user";
option java_multiple_files = true;

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string userId = 1;
}

message DeleteUserResponse {
    string userId = 1;
}

message ListUserRequest {

}

message ListUserResponse {
    User user = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}; // return NOT_FOUND if not found
    rpc ListUser(ListUserRequest) returns (stream ListUserResponse) {};
}